err/mhut.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/mhut'...
Compiling './lib/python3.5/site-packages/mhut/datautils.py'...
***   File "./lib/python3.5/site-packages/mhut/datautils.py", line 100
    print "Could not open {} for reading!".format(fname)
                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mhut/pathutils.py'...
***   File "./lib/python3.5/site-packages/mhut/pathutils.py", line 49
    print path, "already exists. Not appending to ", self.name
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mhut/testutils.py'...
***   File "./lib/python3.5/site-packages/mhut/testutils.py", line 14
    print "\n-- RUNNING TEST: <{}> --\n".format(func.__name__)
                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mhut/timeutils.py'...
***   File "./lib/python3.5/site-packages/mhut/timeutils.py", line 198
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mhut-1.4.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
